--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-day-picker": "^8.10.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
