--- a/easyinn-mobile/package.json
+++ b/easyinn-mobile/package.json
@@ -23,10 +23,12 @@
     "expo": "^53.0.10",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.2.0",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.3",
     "expo-router": "~5.0.6",
     "expo-splash-screen": "^0.30.9",
     "expo-status-bar": "~2.2.3",
@@ -46,7 +48,8 @@
     "react-native-tab-view": "^4.1.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-dev-client": "~5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
