--- a/easyinn-mobile/android/app/build.gradle
+++ b/easyinn-mobile/android/app/build.gradle
@@ -153,7 +153,8 @@ dependencies {
     implementation("com.facebook.react:react-android")
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-messaging'
-    implementation platform('com.google.firebase:firebase-bom:32.8.0');
+    implementation platform('com.google.firebase:firebase-bom:32.8.0')
+
     def isGifEnabled = (findProperty('expo.gif.enabled') ?: "") == "true";
     def isWebpEnabled = (findProperty('expo.webp.enabled') ?: "") == "true";
     def isWebpAnimatedEnabled = (findProperty('expo.webp.animated') ?: "") == "true";
