--- a/easyinn-mobile/android/settings.gradle
+++ b/easyinn-mobile/android/settings.gradle
@@ -31,7 +31,7 @@ extensions.configure(com.facebook.react.ReactSettingsExtension) { ex ->
 }
 expoAutolinking.useExpoModules()
 
-rootProject.name = 'easyinn-mobile'
+rootProject.name = 'EasyInn'
 
 expoAutolinking.useExpoVersionCatalog()
 
