--- a/easyinn-mobile/package.json
+++ b/easyinn-mobile/package.json
@@ -12,26 +12,26 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/drawer": "^7.4.1",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
-    "expo": "^53.0.10",
+    "expo": "~53.0.0",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.0",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.2.0",
+    "expo-image": "~2.3.0",
     "expo-linking": "~7.1.5",
     "expo-notifications": "~0.31.3",
     "expo-router": "~5.0.6",
-    "expo-splash-screen": "^0.30.9",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "^0.4.5",
     "expo-system-ui": "~5.0.8",
@@ -56,7 +56,7 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~9.2.0",
+    "eslint-config-expo": "^9.2.0",
     "typescript": "~5.8.3"
   },
   "private": true
