--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,8 @@ Thumbs.db
 
 TODO.txt
 easyinn-2c8c9-f21bf8e4c33f.json
+easyinn-2c8c9-firebase-adminsdk-fbsvc-d8e7c136a9.json
+
+
+./android
+./ios
