--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,41 +1,98 @@
 amqp==5.3.1
+anyio==4.9.0
 asgiref==3.8.1
 attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
 billiard==4.2.1
+CacheControl==0.14.3
+cachetools==5.5.2
 celery==5.5.2
+certifi==2025.4.26
+cffi==1.17.1
+channels==4.2.2
+channels_redis==4.2.1
+charset-normalizer==3.4.2
 click==8.1.8
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
+constantly==23.10.4
+cryptography==45.0.3
+daphne==4.2.0
+dj-database-url==3.0.0
 Django==5.2
+django-cors-headers==4.7.0
 django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
 drf-spectacular-sidecar==2025.4.1
 drf-yasg==1.21.10
+exponent_server_sdk==2.1.0
+firebase-admin==6.9.0
+google-api-core==2.25.0
+google-api-python-client==2.171.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.21.0
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.72.1
+grpcio-status==1.72.1
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
+hyperframe==6.1.0
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
 inflection==0.5.1
 iniconfig==2.1.0
 jsonschema==4.23.0
 jsonschema-specifications==2025.4.1
 kombu==5.5.3
+msgpack==1.1.0
 packaging==25.0
 pluggy==1.5.0
 prompt_toolkit==3.0.51
+proto-plus==1.26.1
+protobuf==6.31.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
 PyJWT==2.9.0
+pyOpenSSL==25.1.0
+pyparsing==3.2.3
 pytest==8.3.5
 pytest-django==4.11.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 redis==5.2.1
 referencing==0.36.2
+requests==2.32.3
 rpds-py==0.24.0
+rsa==4.9.1
+service-identity==24.2.0
+setuptools==80.9.0
 six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
+Twisted==25.5.0
+txaio==23.1.1
+typing_extensions==4.13.2
 tzdata==2025.2
 uritemplate==4.1.1
+urllib3==2.4.0
 vine==5.1.0
 wcwidth==0.2.13
-django-cors-headers==4.7.0
+zope.interface==7.2
