--- a/.gitignore
+++ b/.gitignore
@@ -41,10 +41,7 @@ Thumbs.db
 TODO.txt
 easyinn-2c8c9-f21bf8e4c33f.json
 
-easyinn-2c8c9-firebase-adminsdk-fbsvc-d8e7c136a9.json
 
-
-easyinn-mobile/android/
-easyinn-mobile/ios/
 /backend/hotelbackend/easyinn-2c8c9-firebase-adminsdk-fbsvc-55a42daeea.json
 /easyinn-mobile/easyinn-2c8c9-firebase-adminsdk-fbsvc-d8e7c136a9.json
+/easyinn-mobile/android
