--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ easyinn-2c8c9-f21bf8e4c33f.json
 /easyinn-mobile/android
 
 
+/backend/hotelbackend/easyinn-2c8c9-firebase-adminsdk-fbsvc-4344fb57ea.json
+/easyinn-mobile/easyinn-2c8c9-firebase-adminsdk-fbsvc-b5335fb85a.json
